--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,5 @@ spring:
     url: jdbc:mysql://localhost:3306/store?createDatabaseIfNotExist=true
     username: root
     password: password
-
-mail:
-  host: https://smtp.gmail.com
-  port: 5761
+  jpa:
+    show-sql: true
